--- a/Trabalho_01/nbproject/project.properties
+++ b/Trabalho_01/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=trabalho_01.Trabalho_01
+main.class=trabalho_01.Grafo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
